# ZippyViewer

./: .gitignore  LICENSE-APACHE  LICENSE-MIT  README.md
android-app/: README.md  (+1 more)
zippy-remote/: ALL_TASKS_COMPLETED.md  ARCHITECTURE_COMPLETION_REPORT.md  CHANGELOG.md  COMPLETION_STATUS.md  COMPLETION_STATUS_FINAL.md  CONTRIBUTING.md  Cargo.toml  FINAL_COMPLETION_REPORT.md  FINAL_COMPLETION_SUMMARY.md  FINAL_TASK_COMPLETION_REPORT.md  README.md  TASK_COMPLETION_SUMMARY.md
zippy-remote/crates/zrc-admin-console/: .env.example  Cargo.toml  Dockerfile  README.md
zippy-remote/crates/zrc-admin-console/migrations/: 20250104120000_initial.sql  20250104130000_devices_pairings.sql  20250104140000_infrastructure.sql  20250104150000_updates.sql  20250104160000_api_keys.sql  20250105120000_add_totp_to_users.sql  20260105035000_device_grouping.sql  20260105035500_password_resets.sql
zippy-remote/crates/zrc-admin-console/src/: assets.rs  main.rs
zippy-remote/crates/zrc-admin-console/web/: package-lock.json  package.json
zippy-remote/crates/zrc-agent/: COMPLETION_SUMMARY.md  Cargo.toml
zippy-remote/crates/zrc-agent/src/: audit.rs  capture.rs  clipboard.rs  config.rs  consent.rs  file_transfer.rs  identity.rs  input.rs  lib.rs  main.rs  media_transport.rs  pairing.rs  policy.rs  replay.rs  service.rs  session.rs  signaling.rs
zippy-remote/crates/zrc-controller/: Cargo.toml
zippy-remote/crates/zrc-controller/src/: cli.rs  config.rs  debug.rs  frames.rs  identity.rs  input.rs  lib.rs  main.rs  output.rs  pairing.rs  pairings.rs  proptests.rs  session.rs
zippy-remote/crates/zrc-core/: Cargo.toml
zippy-remote/crates/zrc-core/src/: audit.rs  dispatch.rs  errors.rs  harness.rs  http_mailbox.rs  keys.rs  lib.rs  pairing.rs  platform.rs  policy.rs  quic.rs  quic_mux.rs  rate_limit.rs  session.rs  sqlite_store.rs  store.rs  transport.rs  types.rs
zippy-remote/crates/zrc-core/tests/: flow.rs  integration.rs
zippy-remote/crates/zrc-crypto/: Cargo.toml
zippy-remote/crates/zrc-crypto/src/: cert_binding.rs  directory.rs  envelope.rs  hash.rs  identity.rs  lib.rs  pairing.rs  proptests.rs  replay.rs  sas.rs  session_crypto.rs  ticket.rs  transcript.rs  utils.rs
zippy-remote/crates/zrc-demo/: Cargo.toml
zippy-remote/crates/zrc-demo/src/: main.rs
zippy-remote/crates/zrc-desktop/: Cargo.toml  VERIFICATION.md
zippy-remote/crates/zrc-desktop/src/: app.rs  clipboard.rs  device.rs  diagnostics.rs  input.rs  lib.rs  main.rs  monitor.rs  platform.rs  proptests.rs  session.rs  settings.rs  transfer.rs  transport.rs
zippy-remote/crates/zrc-dirnode/: Cargo.toml  VERIFICATION.md
zippy-remote/crates/zrc-dirnode/deploy/: zrc-dirnode.service
zippy-remote/crates/zrc-dirnode/examples/: config.toml
zippy-remote/crates/zrc-dirnode/src/: access.rs  api.rs  config.rs  discovery.rs  lib.rs  main.rs  records.rs  search_protection.rs  server.rs  store.rs  web_ui.rs
zippy-remote/crates/zrc-platform-android/: COMPLETION_SUMMARY.md  Cargo.toml  IMPLEMENTATION_STATUS.md  README.md  SETUP_GUIDE.md
zippy-remote/crates/zrc-platform-android/src/: core.rs  error.rs  frame.rs  input.rs  jni_bindings.rs  lib.rs  session.rs
zippy-remote/crates/zrc-platform-ios/: COMPLETION_SUMMARY.md  Cargo.toml  IMPLEMENTATION_STATUS.md  README.md  SETUP_GUIDE.md  TASK_COMPLETION_SUMMARY.md  TASK_COMPLETION_VERIFICATION.md  build-xcframework.sh  build.rs  checkpoint.sh
zippy-remote/crates/zrc-platform-ios/AppStore/: TestFlight.md  metadata.md
zippy-remote/crates/zrc-platform-ios/src/: core.rs  error.rs  frame.rs  input.rs  lib.rs  zrc_ios.udl
zippy-remote/crates/zrc-platform-linux/: COMPLETION_STATUS.md  Cargo.toml  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  README.md
zippy-remote/crates/zrc-platform-linux/deploy/: FLATPAK_LIMITATIONS.md  build-appimage.sh  build-deb.sh  build-rpm.sh  zrc-agent-user.service  zrc-agent.service
zippy-remote/crates/zrc-platform-linux/src/: capture_pipewire.rs  capture_x11_basic.rs  capture_x11_shm.rs  capturer.rs  clipboard.rs  desktop_env.rs  injector.rs  input_uinput.rs  input_xtest.rs  lib.rs  monitor.rs  platform.rs  secret_store.rs  system_info.rs  systemd.rs  wayland_input.rs
zippy-remote/crates/zrc-platform-mac/: CODE_SIGNING.md  COMPLETION_STATUS.md  Cargo.toml  IMPLEMENTATION_STATUS.md  README.md  build.rs  entitlements.plist
zippy-remote/crates/zrc-platform-mac/src/: capture_cg.rs  capture_sck.rs  capturer.rs  clipboard.rs  injector.rs  keyboard.rs  keychain.rs  launchd.rs  lib.rs  monitor.rs  mouse.rs  permissions.rs  platform.rs  system_info.rs
zippy-remote/crates/zrc-platform-win/: COMPLETION_STATUS.md  Cargo.toml  README.md  TEST_SUMMARY.md  VALIDATION.md
zippy-remote/crates/zrc-platform-win/src/: capture_dxgi.rs  capture_gdi.rs  capture_wgc.rs  capturer.rs  clipboard.rs  injector.rs  keystore.rs  lib.rs  monitor.rs  platform.rs  service.rs  special_keys.rs  system_info.rs  uac.rs
zippy-remote/crates/zrc-platform-win/tests/: property_tests.rs  validation.rs
zippy-remote/crates/zrc-proto/proto/: Cargo.toml  build.rs  zrc_v1.proto
zippy-remote/crates/zrc-relay/: Cargo.toml  PROPERTY_TESTS.md  VERIFICATION.md
zippy-remote/crates/zrc-relay/deploy/: zrc-relay.service
zippy-remote/crates/zrc-relay/examples/: config.toml
zippy-remote/crates/zrc-relay/src/: admin.rs  allocation.rs  bandwidth.rs  config.rs  forwarder.rs  ha.rs  lib.rs  main.rs  metrics.rs  security.rs  server.rs  token.rs
zippy-remote/crates/zrc-rendezvous/: COMPLETION_SUMMARY.md  Cargo.toml  IMPLEMENTATION_STATUS.md
zippy-remote/crates/zrc-rendezvous/deploy/: README.md  zrc-rendezvous.service
zippy-remote/crates/zrc-rendezvous/examples/: config.toml
zippy-remote/crates/zrc-security/: .cargo-audit.toml  COMPLETION_CHECKLIST.md  CRITICAL_REVIEW.md  Cargo.toml  FINAL_REVIEW.md  FINAL_VALIDATION.md  IMPLEMENTATION_SUMMARY.md  README.md  STATIC_ANALYSIS.md  THREAT_MODEL.md  VALIDATION_REPORT.md  clippy.toml
zippy-remote/crates/zrc-transport/: Cargo.toml
zippy-remote/crates/zrc-updater/: Cargo.toml  OFFLINE_UPDATES.md
zippy-remote/crates/zrc-viewer/: Cargo.toml
(+311 files in other folders)
