[package]
name = "zrc-agent"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
publish = false

[[bin]]
name = "zrc-agent"
path = "src/main.rs"

[dependencies]
# Core ZRC dependencies
zrc-core = { path = "../zrc-core", features = ["quic", "http-mailbox"] }
zrc-crypto = { path = "../zrc-crypto" }
zrc-proto = { path = "../zrc-proto/proto" }
zrc-transport = { path = "../zrc-transport" }

# Platform-specific (conditional)
[target.'cfg(windows)'.dependencies]
zrc-platform-win = { path = "../zrc-platform-win" }

# Async runtime
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "sync", "time", "signal", "fs"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
bytes = "1"
hex = "0.4"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
dashmap = "5.5"

# CLI
clap = { version = "4.4", features = ["derive"] }

# WebRTC (placeholder - can be replaced with actual webrtc-rs or FFI bindings)
# webrtc = "0.8"  # Uncomment when webrtc-rs is mature enough

# Log rotation
tracing-appender = "0.2"

[dev-dependencies]
proptest = "1.4"
tokio-test = "0.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
