[package]
name = "zrc-controller"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "CLI controller for ZRC - pairing, sessions, and debugging"
publish = false

[[bin]]
name = "zrc-controller"
path = "src/main.rs"

[dependencies]
# Internal dependencies
zrc-core = { path = "../zrc-core", features = ["sqlite", "quic"] }
zrc-crypto = { path = "../zrc-crypto" }
zrc-proto = { path = "../zrc-proto/proto" }
zrc-transport = { path = "../zrc-transport" }

# CLI framework
clap = { version = "4.5", features = ["derive", "env", "string"] }

# Async runtime
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "io-util", "signal"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Protobuf
prost = "0.13"

# Output formatting
comfy-table = "7.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cryptography (for identity management)
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = "2"
rand_core = "0.6"
getrandom = "0.2"

# Storage
rusqlite = { version = "0.29.0", features = ["bundled"] }

# Utilities
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
directories = "5.0"
url = "2.5"

# QUIC transport
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["std"] }

# Optional: QR code parsing
image = { version = "0.25", optional = true }
rqrr = { version = "0.7", optional = true }

# HTTP client for rendezvous/relay
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"], optional = true }

[features]
default = []
qr = ["dep:image", "dep:rqrr"]
http-mailbox = ["dep:reqwest"]

[dev-dependencies]
proptest = "1.4"
tempfile = "3.10"
