[package]
name = "zrc-crypto"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
publish = false

[dependencies]
bytes = "1"
sha2 = "0.10"
hmac = "0.12"
prost = "0.13"
zeroize = "1.8"
hkdf = "0.12"
chacha20poly1305 = { version = "0.10", features = ["std"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand_core = "0.6"
getrandom = "0.2"
thiserror = "1.0"
constant_time_eq = "0.3"

zrc-proto = { path = "../zrc-proto/proto" }

[dev-dependencies]
hex = "0.4"
proptest = "1.4"

