[package]
name = "zrc-demo"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
publish = false

[[bin]]
name = "zrc-demo"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "time"] }
bytes = "1"
prost = "0.13"
base64 = "0.22"
anyhow = "1.0"
hex = "0.4"
getrandom = "0.2"

zrc-proto = { path = "../zrc-proto/proto" }
zrc-crypto = { path = "../zrc-crypto" }
zrc-core = { path = "../zrc-core", features = ["http-mailbox", "quic"] }

[target.'cfg(windows)'.dependencies]
zrc-platform-win = { path = "../zrc-platform-win" }

