[package]
name = "zrc-desktop"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# GUI & Rendering
eframe = "0.27"
egui = "0.27"
egui_extras = { version = "0.27", features = ["all_loaders"] }
wgpu = "0.19" # GPU rendering
rfd = "0.14" # File dialogs
arboard = "3.3" # Clipboard

# Async & System
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5.0"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.5"
hex = "0.4"
base64 = "0.21"
bytes = "1.6"
quinn = "0.11"
async-trait = "0.1"
prost = "0.13"

tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "sync", "time", "test-util", "net", "io-util"] }


# Zippy Stack
zrc-core = { path = "../zrc-core", features = ["http-mailbox", "quic"] }
zrc-proto = { path = "../zrc-proto/proto" }
zrc-crypto = { path = "../zrc-crypto" }
zrc-transport = { path = "../zrc-transport" }

[dev-dependencies]
proptest = "1.4"
sha2 = "0.10"
tokio-test = "0.4"
