[package]
name = "zrc-dirnode"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "Home-hostable directory node for ZRC - decentralized device discovery with privacy-first defaults"
publish = false

[[bin]]
name = "zrc-dirnode"
path = "src/main.rs"

[dependencies]
# HTTP server
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "sync", "time", "signal", "fs", "io-util", "net"] }

# Database
rusqlite = { version = "0.29.0", features = ["bundled"] }

# Concurrent data structures
dashmap = "5.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Cryptography
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"

# Utilities
bytes = "1"
hex = "0.4"
base64 = "0.22"
async-trait = "0.1"
prost = "0.13"
rand = "0.8"

# Web UI (optional)
tera = { version = "1.19", optional = true }
qrcode = { version = "0.14", optional = true }

# Internal dependencies
zrc-crypto = { path = "../zrc-crypto" }
zrc-proto = { path = "../zrc-proto/proto" }

[features]
default = []
web-ui = ["tera", "qrcode"]

[dev-dependencies]
proptest = "1.4"
tempfile = "3.10"
rand_core = "0.6"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
