[package]
name = "zrc-platform-mac"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
publish = false

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "sync", "time"] }
bytes = "1"
async-trait = "0.1"
zeroize = { version = "1.7", features = ["zeroize_derive"] }

# macOS API dependencies
core-foundation = "0.9"
core-graphics = "0.23"
security-framework = "2.9"
cocoa = "0.25"
objc = "0.2"

# Core dependency for platform trait
zrc-core = { path = "../zrc-core" }

[dev-dependencies]
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
proptest = "1.4"
