[package]
name = "zrc-platform-win"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
publish = false

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "sync", "time"] }
bytes = "1"
async-trait = "0.1"
zeroize = { version = "1.7", features = ["zeroize_derive"] }

# Windows API dependencies
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
  "Win32_System_Console",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Registry",
  "Win32_System_SystemInformation",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
  "Win32_System_Shutdown",
  "Win32_System_StationsAndDesktops",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Direct3D",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Input_Pointer",
  "Win32_Security",
  "Win32_Security_Cryptography",
  "Win32_System_Services",
  "Win32_System_RemoteDesktop",
  "Win32_Networking_WinSock",
  "Win32_NetworkManagement_IpHelper",
] }

# Core dependency for platform trait
zrc-core = { path = "../zrc-core" }

[dev-dependencies]
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }

