[package]
name = "zrc-relay"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "QUIC relay server for ZRC - last-resort connectivity when NAT traversal fails"
publish = false

[[bin]]
name = "zrc-relay"
path = "src/main.rs"

[dependencies]
# QUIC transport
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["std"] }
rustls-pemfile = "2.0"

# Async runtime
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "sync", "time", "signal", "fs", "io-util", "net"] }

# Concurrent data structures
dashmap = "5.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP server for metrics/admin API
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Metrics
prometheus = "0.13"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Cryptography (for token verification)
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"

# Utilities
bytes = "1"
hex = "0.4"
base64 = "0.22"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }

# Internal dependencies
zrc-crypto = { path = "../zrc-crypto" }
zrc-proto = { path = "../zrc-proto/proto" }

[features]
default = []
redis = ["dep:redis"]

[dependencies.redis]
version = "0.25"
optional = true
features = ["tokio-comp"]

[dev-dependencies]
proptest = "1.4"
tempfile = "3.10"
rand_core = "0.6"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
