[package]
name = "zrc-rendezvous"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
publish = false

[[bin]]
name = "zrc-rendezvous"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
bytes = "1"
hex = "0.4"
thiserror = "1.0"
dashmap = "5.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
rustls = "0.23"
rustls-pemfile = "2.0"
tokio-rustls = "0.26"
tokio-stream = "0.1"
toml = "0.8"
prometheus = "0.13"
anyhow = "1.0"

[dev-dependencies]
proptest = "1.4"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols

