[package]
name = "zrc-security"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
publish = false

[dependencies]
zrc-proto = { path = "../zrc-proto/proto" }
zrc-crypto = { path = "../zrc-crypto" }
sha2 = "0.10"
hkdf = "0.12"
ed25519-dalek = { version = "2", features = ["rand_core"] }
governor = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
zeroize = "1.8"
constant_time_eq = "0.3"

[dev-dependencies]
proptest = "1.4"
libfuzzer-sys = "0.4"
rand_core = "0.6"
