[package]
name = "zrc-transport"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
publish = false

[dependencies]
tokio = { version = "1.37", features = ["rt", "sync", "time"] }
async-trait = "0.1"
anyhow = "1.0"
bytes = "1.4"
thiserror = "1.0"
dashmap = "5.5"
parking_lot = "0.12"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
rand = "0.8"

[dev-dependencies]
proptest = "1.4"
tokio-test = "0.4"
tokio = { version = "1.37", features = ["rt", "rt-multi-thread"] }

[features]
default = []
