[package]
name = "zrc-proto"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
publish = false
description = "Protocol Buffers wire format definitions for ZRC"

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
prost = "0.13"
prost-types = "0.13"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
proptest = "1.4"
